--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.4.jar=D:\\Major\\Semester_4\\Prj\\Material\\commons-fileupload-1.4.jar
+file.reference.commons-io-2.11.0.jar=D:\\Major\\Semester_4\\Prj\\Material\\commons-io-2.11.0.jar
 file.reference.sqljdbc4.jar=../../connect database/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,7 +41,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-fileupload-1.4.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
