--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
+j2ee.server.home=D:/Major/Semester_4/Prj/servertomcat/apache-tomcat-8.5.78
+j2ee.server.instance=tomcat80:home=D:\\Major\\Semester_4\\Prj\\servertomcat\\apache-tomcat-8.5.78
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
